--- a/index.html
+++ b/index.html
@@ -1,85 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8">
 <title>Greedfarm</title>
 
 <style>
-body{
-margin:0;
-font-family:-apple-system,BlinkMacSystemFont;
-color:white;
-text-align:center;
-background:black;
-}
+body{margin:0;font-family:-apple-system;color:white;text-align:center;background:black}
+.bg{position:fixed;width:100%;height:100%;background:url("IMG_2044.jpeg") center/cover;filter:brightness(.35);z-index:-1}
 
-/* BACKGROUND */
-.bg{
-position:fixed;
-width:100%;
-height:100%;
-background:url("IMG_2044.jpeg") center/cover;
-filter:brightness(.35);
-z-index:-1;
-}
+.logo{width:90px;border-radius:20px;margin-top:45px;box-shadow:0 0 20px #00ff88}
+h1{letter-spacing:3px;text-shadow:0 0 12px #00ff88}
 
-/* LOGO */
-.logo{
-width:90px;
-border-radius:20px;
-margin-top:45px;
-box-shadow:0 0 18px #00ff88;
-}
+.btn{width:72%;margin:8px auto;padding:12px;border-radius:14px;font-size:16px;font-weight:600;cursor:pointer}
+.hash{background:#16a34a}.cali{background:#14b8a6}.spain{background:#22c55e}.promo{background:#f59e0b}.pay{background:#ef4444}
 
-h1{
-margin:12px 0 35px;
-letter-spacing:2px;
-text-shadow:0 0 10px #00ff88;
-}
+.page{display:none}
+video{width:94%;border-radius:14px;margin:12px 0}
 
-/* MENU BUTTONS */
-.btn{
-width:72%;
-margin:9px auto;
-padding:13px;
-border-radius:14px;
-font-size:17px;
+.order{
+background:#00ff88;
+color:black;
+padding:8px 16px;
+border-radius:10px;
 font-weight:600;
-cursor:pointer;
-transition:.2s;
-}
-.btn:active{transform:scale(.97);}
-
-.hash{background:#16a34a;}
-.cali{background:#14b8a6;}
-.spain{background:#22c55e;}
-.promo{background:#f59e0b;}
-.pay{background:#ef4444;}
-
-.section{display:none;padding:20px;}
-video{width:95%;border-radius:12px;margin:12px 0;}
-
-/* LANGUE */
-.lang{
-position:fixed;
-right:12px;
-bottom:18px;
-display:flex;
-flex-direction:column;
-gap:6px;
+display:inline-block;
+margin-bottom:18px;
 }
 
-.lang div{
-background:#111;
-padding:6px 10px;
-border-radius:8px;
-font-size:12px;
-cursor:pointer;
-opacity:.8;
-}
+.back{margin:15px;font-size:18px}
 
-.lang div:active{transform:scale(.9);}
+.lang{position:fixed;right:10px;bottom:15px;display:flex;flex-direction:column;gap:6px}
+.lang div{background:#222;padding:6px 10px;border-radius:8px;font-size:12px}
 </style>
 </head>
 
@@ -87,101 +39,77 @@ opacity:.8;
 
 <div class="bg"></div>
 
-<!-- HOME -->
 <div id="home">
-<img src="IMG_2044.jpeg" class="logo">
+<img class="logo" src="IMG_2044.jpeg">
 <h1>GREEDFARM</h1>
 
-<div class="btn hash" onclick="openSection('hash')">🧱 Hash</div>
-<div class="btn cali" onclick="openSection('cali')">🇺🇸 Cali</div>
-<div class="btn spain" onclick="openSection('spain')">🇪🇸 Spain</div>
-<div class="btn promo" onclick="openSection('promo')">🔥 Promotion</div>
-<div class="btn pay" onclick="window.open('https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I')">💳 Paiement</div>
+<div class="btn hash" onclick="openPage('hash')">🍫 Hash</div>
+<div class="btn cali" onclick="openPage('cali')">🇺🇸 Cali</div>
+<div class="btn spain" onclick="openPage('spain')">🇪🇸 Spain</div>
+<div class="btn promo">🔥 Promotion</div>
+
+<a href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">
+<div class="btn pay">💳 Paiement</div>
+</a>
 </div>
 
 <!-- HASH -->
-<div id="hash" class="section">
-<h2>Hash</h2>
+<div id="hash" class="page">
+<div class="back" onclick="goHome()">⬅ Retour</div>
 
 <video controls src="VID_20260129_020719_108.mp4"></video>
-<p>Static Mountain Giants</p>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260212_024354_063.mp4"></video>
-<p>Hidden Farm Frozen Fruitella</p>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_211142_496.mp4"></video>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_212432_315.mp4"></video>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_213406_222.mov"></video>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="telegram_video.mp4"></video>
-
-<div class="btn hash" onclick="goBack()">⬅ Retour</div>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 </div>
 
 <!-- CALI -->
-<div id="cali" class="section">
-<h2>Cali</h2>
+<div id="cali" class="page">
+<div class="back" onclick="goHome()">⬅ Retour</div>
 
 <video controls src="VID_20260218_212243_412.mp4"></video>
-<p>Wedding Cake</p>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_213405_917.mp4"></video>
-<p>Super Runtz</p>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_213406_052.mp4"></video>
-<p>Sherbert Gelato</p>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_213406_351.mp4"></video>
-<p>Rainbow Sherbert</p>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 
 <video controls src="VID_20260218_213406_770.mp4"></video>
-<p>Fortune Cookie</p>
-
-<div class="btn cali" onclick="goBack()">⬅ Retour</div>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
 </div>
 
-<!-- SPAIN -->
-<div id="spain" class="section">
-<h2>Spain</h2>
-<p>Bientôt disponible</p>
-<div class="btn spain" onclick="goBack()">⬅ Retour</div>
-</div>
-
-<!-- PROMO -->
-<div id="promo" class="section">
-<h2>Promotion</h2>
-<p>Arrivages & deals bientôt</p>
-<div class="btn promo" onclick="goBack()">⬅ Retour</div>
-</div>
-
-<!-- LANG -->
 <div class="lang">
-<div onclick="setLang('fr')">FR</div>
-<div onclick="setLang('it')">IT</div>
-<div onclick="setLang('en')">EN</div>
+<div>FR</div>
+<div>IT</div>
+<div>EN</div>
 </div>
 
 <script>
-function openSection(id){
+function openPage(id){
 document.getElementById("home").style.display="none";
 document.getElementById(id).style.display="block";
 }
-
-function goBack(){
-document.querySelectorAll(".section").forEach(s=>s.style.display="none");
+function goHome(){
+document.querySelectorAll(".page").forEach(p=>p.style.display="none");
 document.getElementById("home").style.display="block";
-}
-
-/* LANGUE SIMPLE */
-function setLang(l){
-if(l==="it"){
-alert("Version IT bientôt 🔥");
-}
-if(l==="en"){
-alert("English soon 🔥");
-}
 }
 </script>
 
